<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_profile"
            android:enabled="true"
            android:icon="@drawable/selector_ic_person"
            android:title="@string/you"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_likes"
            android:enabled="true"
            android:icon="@drawable/selector_ic_favorite"
            android:title="@string/swipe"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_chats"
            android:enabled="true"
            android:icon="@drawable/selector_ic_chat"
            android:title="@string/chats"
            app:showAsAction="ifRoom" />
    </group>
</menu>