<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.yeket.music.bridge.ui.ui_components.CustomButton
        android:id="@+id/save_app_settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:layout_marginLeft="@dimen/button_side_margin"
        android:layout_marginRight="@dimen/button_side_margin"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.yeket.music.bridge.ui.ui_components.CustomTextView
        android:id="@+id/new_messages_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="@string/new_messages"
        app:layout_constraintBottom_toBottomOf="@+id/new_messages_switch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/new_matches_switch"
        app:layout_constraintTop_toTopOf="@+id/new_messages_switch"
        />

    <Switch
        android:id="@+id/new_messages_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/new_likes_switch" />

    <com.yeket.music.bridge.ui.ui_components.CustomTextView
        android:id="@+id/new_likes_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical"
        android:text="@string/new_likes"
        app:layout_constraintBottom_toBottomOf="@+id/new_likes_switch"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/new_matches_switch"
        app:layout_constraintTop_toTopOf="@+id/new_likes_switch"
        app:layout_constraintVertical_bias="1.0" />

    <Switch
        android:id="@+id/new_likes_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/new_matches_switch" />

    <com.yeket.music.bridge.ui.ui_components.CustomTextView
        android:id="@+id/new_matches_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/new_matches"
        app:layout_constraintBottom_toBottomOf="@+id/new_matches_switch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/new_matches_switch"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.yeket.music.bridge.ui.ui_components.CustomTitleTextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin"
        android:text="@string/your_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Switch
        android:id="@+id/new_matches_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_matches_label" />
        <!--android:onCheckedChanged="@{(switch, checked) -> viewModel.notificationSwitched(NotificationType.MATCH, checked)}"/> -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/notifications"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/screen_title"
        app:layout_constraintTop_toBottomOf="@+id/screen_title" />

</android.support.constraint.ConstraintLayout>
