<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/selected_genres_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yeket.music.bridge.ui.ui_components.CustomTitleTextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/side_margin"
        android:gravity="center"
        android:text="@string/discover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <com.yeket.music.bridge.ui.ui_components.CustomTextView
        android:id="@+id/hintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1"
        android:text="@string/tap_to_choose_genres"
        android:textColor="#9b9b9b"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <com.igalata.bubblepicker.rendering.BubblePicker
        android:id="@+id/picker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        app:backgroundColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintTextView" />

    <com.yeket.music.bridge.ui.ui_components.CustomButton
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_bottom_margin"
        android:layout_marginEnd="@dimen/button_side_margin"
        android:layout_marginLeft="@dimen/button_side_margin"
        android:layout_marginRight="@dimen/button_side_margin"
        android:layout_marginStart="@dimen/button_side_margin"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>