<layout>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.yeket.music.bridge.ui.ui_components.CustomButton
            android:id="@+id/app_settings_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="@dimen/button_side_margin"
            android:layout_marginRight="@dimen/button_side_margin"
            android:text="@string/app_settings"
            app:layout_constraintBottom_toTopOf="@+id/edit_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <LinearLayout
            android:id="@+id/genre_tags_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_you_label"
            app:layout_constraintRight_toRightOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ninja209"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/user_data_list"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintHorizontal_bias="0.496">

            <com.yeket.music.bridge.ui.ui_components.BaseRegularTextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jennifer Smith"
                android:textColor="@color/text_dark"
                android:textSize="22sp" />

            <com.yeket.music.bridge.ui.ui_components.BaseRegularTextView
                android:id="@+id/comma_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=","
                android:textColor="@color/text_dark"
                android:textSize="22sp" />

            <com.yeket.music.bridge.ui.ui_components.BaseRegularTextView
                android:id="@+id/age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="19"
                android:textColor="@color/text_dark"
                android:textSize="22sp" />

        </LinearLayout>

        <com.yeket.music.bridge.ui.ui_components.BaseRegularTextView
            android:id="@+id/about_you_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am_cool_and_lovely"
            android:textColor="@color/text_light"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_data_list" />

        <com.yeket.music.bridge.ui.ui_components.CustomButton
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="@dimen/button_side_margin"
            android:layout_marginRight="@dimen/button_side_margin"
            android:text="@string/edit_profile"
            app:layout_constraintBottom_toTopOf="@+id/logout_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.yeket.music.bridge.ui.ui_components.CustomButton
            android:id="@+id/logout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="@dimen/button_side_margin"
            android:layout_marginRight="@dimen/button_side_margin"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/edit_genres_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/selector_edit_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/genre_tags_list" />

        <TextView
            android:id="@+id/no_genres_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/edit_genres_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_genres_button"
            android:text="@string/click_edit_to_add_genres" />

    </android.support.constraint.ConstraintLayout>
</layout>
